# ws-basic

./: .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  custom_stt.py  main.py  phrases.py  schemas.py  service.py  state.py  voice_session.py
backend/tests/: test_state.py
frontend/: .env.local.example  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatClient.tsx
